@@ -1273,8 +1273,8 @@ const unsigned char _Py_M__importlib[] = {
     0,98,121,116,101,99,111,100,101,32,105,115,32,115,116,97,
     108,101,32,102,111,114,32,123,33,114,125,244,4,0,0,0,
     115,105,122,101,108,3,0,0,0,255,127,255,127,3,0,40,
-    9,0,0,0,244,12,0,0,0,95,77,65,71,73,67,95,
-    66,89,84,69,83,114,46,0,0,0,114,140,0,0,0,114,
+    9,0,0,0,244,12,0,0,0,77,65,71,73,67,95,78,
+    85,77,66,69,82,114,46,0,0,0,114,140,0,0,0,114,
     156,0,0,0,114,31,0,0,0,244,8,0,0,0,69,79,
     70,69,114,114,111,114,114,14,0,0,0,114,93,0,0,0,
     114,19,0,0,0,40,11,0,0,0,114,52,0,0,0,114,
